# multi_UAV_simulator

./: README.md
quadrotor_simulator_pkg/hector_quadrotor/hector_quadrotor_gazebo/urdf/: quadrotor_plugins.gazebo.xacro
uav_ros_controller/: CMakeLists.txt  package.xml
uav_ros_controller/launch/: spawn_quadrotor.launch  uav10.launch  uav2.launch  uav20.launch  uav30.launch  uav40.launch  uav50.launch
uav_ros_controller/src/: subpub_list.h  talker.cpp~  uav_controller.cpp
uav_ros_controller/src/data/: gps_output.txt  vel_input.txt
